text align fix

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,8 @@ body{
 #top{
     color: #f2f2f2;
     font-weight: 200;
+    padding: 6px;
+    text-align: center;
 }
 #name{
     font-weight: bold;
